:lipstick: fix style issue on firefox

--- a/sass/pages/photographer.scss
+++ b/sass/pages/photographer.scss
@@ -50,6 +50,10 @@ main {
     left: 50%;
     transform: translateX(-50%);
   }
+
+  .media {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1024px) {
